feat: git 캐시 초기화

--- a/src/main/resources/env.properties
+++ b/src/main/resources/env.properties
@@ -1,6 +1,6 @@
 DB_USERNAME=root
 DB_PASSWORD=gksktodaud1!
-DB_URL=jdbc:mysql://localhost:3306/moonshield?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&useUnicode=true&characterSetResults=utf8mb4
+DB_URL=jdbc:mysql://localhost:3306/ddobagi?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&useUnicode=true&characterSetResults=utf8mb4
 DB_DRIVER_CLASS=com.mysql.cj.jdbc.Driver
 DB_DIALECT=org.hibernate.dialect.MySQLDialect
 
