--- a/src/main/resources/application-jpa.yml
+++ b/src/main/resources/application-jpa.yml
@@ -12,7 +12,7 @@ spring:
     driver-class-name: ${DB_DRIVER_CLASS}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
